# nimble-steps-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: .gitignore  CMakeLists.txt
src/examples/: CMakeLists.txt  main.c
src/include/nimble-steps/: pending_steps.h  receive_mask.h  step.h  steps.h  types.h
src/lib/: CMakeLists.txt  pending_steps.c  receive_mask.c  steps.c
src/test/: CMakeLists.txt  main.c  test.c  utest.h
